--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -210,9 +210,9 @@
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10 ">
                             <img src="../assets/images/icons/frontend-dark-icon.svg" alt="book-mark"
-                                class="mx-auto   dark:!block !hidden w-[190px] h-[176px]" />
+                                class="mx-auto   dark:!block !hidden w-[125px] " />
                             <img src="../assets/images/icons/Frontend-light-icon.svg" alt="book-mark" 
-                                class="mx-auto  dark:hidden block w-[190px] h-[176px]" />
+                                class="mx-auto  dark:hidden block w-[125px] " />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 Front End Development
                             </div>
@@ -229,9 +229,9 @@
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10">
                             <img src="../assets/images/icons/backend-dark-icon.svg" alt="book-mark"
-                                class="mx-auto  w-[190px] h-[176px]  dark:!block !hidden" />
+                                class="mx-auto  w-[125px]   dark:!block !hidden" />
                             <img src="../assets/images/icons/backend-light-icon.svg" alt="book-mark"
-                                class="mx-auto w-[190px] h-[176px] dark:hidden block" />
+                                class="mx-auto w-[125px]  dark:hidden block" />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 Backend Development
                             </div>
@@ -247,9 +247,9 @@
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10">
                             <img src="../assets/images/icons/ai-dark-icon.svg" alt="book-mark"
-                                class="mx-auto w-[190px] h-[176px]   dark:!block !hidden" />
+                                class="mx-auto w-[125px]    dark:!block !hidden" />
                             <img src="../assets/images/icons/ai-light-icon.svg" alt="book-mark"
-                                class="mx-auto w-[190px] h-[176px] dark:hidden block" />
+                                class="mx-auto w-[125px] dark:hidden block" />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 AI/ML Development
                             </div>
@@ -266,9 +266,9 @@
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10">
                             <img src="../assets/images/icons/low-dark-icon.svg" alt="book-mark"
-                                class="mx-auto w-[190px] h-[176px]   dark:!block !hidden" />
+                                class="mx-auto w-[125px]    dark:!block !hidden" />
                             <img src="../assets/images/icons/low-code-icon.svg" alt="book-mark"
-                                class="mx-auto w-[190px] h-[176px] dark:hidden block" />
+                                class="mx-auto w-[125px]  dark:hidden block" />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 Low Code Development
                             </div>
@@ -422,9 +422,17 @@
 
                 <p
                     class="mt-4 text-base font-normal leading-6 tracking-wide md:text-2xl md:leading-[40.8px] md:tracking-[0.03em] mx-auto dark:text-white text-customblack">
-                    Communication, critical thinking, emotional intelligence,
-                    collaboration, leadership, conflict management, feedback, problem
-                    solving, inclusion, change management, empathy, resilience and more.
+                    Communication, critical thinking, emotional intelligence, collaboration, problem solving, change management, empathy, resilience and more.
+                </p>
+            </section>
+          
+            <section class="mt-12" id="about-us">
+                <img src="../assets/images/logo/vertacx-logo.svg" alt="" class="w-48 h-auto mx-auto dark:block hidden">
+                <img src="../assets/images/logo/vertacx-light-logo.svg" alt=""
+                    class="w-48 h-auto mx-auto dark:hidden block">
+                <p
+                    class="mt-6 text-lg md:text-xl dark:text-white text-customblack md:font-normal md:font-medium md:leading-170% lg:text-2xl max-w-3xl mx-auto">
+                    Vertacx is led by a team with over 20 years of experience in solving real-world challenges and developing software applications for startups and SMEs in Fintech, PropTech, and eCommerce. We focus on creating industry-ready professionals by honing both technical and soft skills.
                 </p>
             </section>
             <section class="mt-12">
@@ -435,21 +443,12 @@
                     career.
                 </h2>
 
-                <div class="mt-10">
+                <div class="mt-10 pb-1">
                     <a href="javascript:void(0);"
                         class="dark:bg-custom-green bg-customblue dark:text-black text-white font-bold py-3 px-7 rounded-full dark:hover:shadow-[0_0_16px_0_#7DFFAF] hover:shadow-[0_0_16px_0_#022648] transition-shadow duration-300">
                         Get in Touch
                     </a>
                 </div>
-            </section>
-            <section class="mt-12" id="about-us">
-                <img src="../assets/images/logo/vertacx-logo.svg" alt="" class="w-48 h-auto mx-auto dark:block hidden">
-                <img src="../assets/images/logo/vertacx-light-logo.svg" alt=""
-                    class="w-48 h-auto mx-auto dark:hidden block">
-                <p
-                    class="mt-6 text-lg md:text-xl dark:text-white text-customblack md:font-normal md:font-medium md:leading-170% lg:text-2xl max-w-3xl mx-auto">
-                    Vertacx is led by a team with over 20 years of experience in solving real-world challenges and developing software applications for startups and SMEs in Fintech, PropTech, and eCommerce. We focus on creating industry-ready professionals by honing both technical and soft skills.
-                </p>
             </section>
         </div>
     </main>
