--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick-theme.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body class="dark:bg-black bg-white font-poppins font-display-swap  transition-colors duration-500">
@@ -503,34 +503,36 @@
         </button>
         <form>
             <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-5">
-                <div>
-                    <label class="block mb-3 font-medium text-[12px] leading-[15px] dark:text-customblack text-white"
+                <div class="relative">
+                    <label class="block mb-3 font-medium text-xs leading-4 dark:text-customblack text-white"
                         for="interested">WE ARE INTERESTED IN</label>
                     <select id="interested"
-                        class="font-semibold block w-full mt-1 p-2 border border-gray-300 dark:bg-[#212121] bg-white dark:text-white text-customblack rounded shadow-sm">
+                        class="font-semibold block w-full mt-1 p-2 pr-10 border border-gray-300 dark:bg-[#212121] bg-white dark:text-white text-customblack rounded shadow-sm appearance-none custom-select">
                         <option value="select an option"
-                            class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                            class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-40 rounded">
                             SELECT AN OPTION</option>
                         <option value="part time"
-                            class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                            class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-40 rounded">
                             Front End Development</option>
                         <option value="full time"
-                            class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                            class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-40 rounded">
                             Back End Development</option>
                         <option value="permanent"
-                            class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                            class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-40 rounded">
                             AI/ML Development</option>
                         <option value="Online"
-                            class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
+                            class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-40 rounded">
                             Low Code Development</option>
                     </select>
+                    <span id="dropdown-arrow" class="absolute top-1/2 right-3 transform -translate-y-1/2 w-0 h-0 border-l-4 border-r-4 border-t-4 border-t-gray-600 dark:border-t-white border-l-transparent border-r-transparent pointer-events-none transition-transform duration-200 custom-arrow"></span>
                 </div>
+                
 
-                <div>
+                <div  class="relative">
                     <label class="block mb-3 font-medium text-[12px] leading-[15px] dark:text-customblack text-white"
                         for="weAre">PROGRAM TYPE</label>
                     <select id="weAre"
-                        class="font-semibold block w-full mt-1 p-2 border border-gray-300 dark:bg-[#212121] bg-white dark:text-white text-customblack rounded shadow-sm">
+                        class="font-semibold block w-full mt-1 p-2 border border-gray-300 dark:bg-[#212121] bg-white dark:text-white text-customblack rounded shadow-sm custom-select">
                         <option value="select an option"
                             class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
                             SELECT AN OPTION</option>
@@ -544,13 +546,14 @@
                         class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
                         Online</option>
                     </select>
+                    <span id="dropdown-arrow" class="absolute top-1/2 right-3 transform -translate-y-1/2 w-0 h-0 border-l-4 border-r-4 border-t-4 border-t-gray-600 dark:border-t-white border-l-transparent border-r-transparent pointer-events-none transition-transform duration-200 custom-arrow"></span>
                 </div>
             </div>
-            <div class="mb-5">
+            <div class="mb-5 relative">
                 <label class="block mb-3 font-medium text-[12px] leading-[15px] dark:text-customblack text-white"
                     for="stage">WHAT STAGE ARE YOU AT</label>
                 <select id="stage"
-                    class="font-semibold block w-full mt-1 p-2 border border-gray-300 dark:bg-[#212121] bg-white dark:text-white text-customblack rounded shadow-sm ">
+                    class="font-semibold block w-full mt-1 p-2 border border-gray-300 dark:bg-[#212121] bg-white dark:text-white text-customblack rounded shadow-sm custom-select">
                     <option value="select an option"
                         class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
                         SELECT AN OPTION</option>
@@ -573,6 +576,7 @@
                     class="dark:text-white text-customblack bg-white dark:bg-[#212121] hover:bg-opacity-[40%] rounded">
                     1-2 years Experience</option>
                 </select>
+                <span id="dropdown-arrow" class="absolute top-1/2 right-3 transform -translate-y-1/2 w-0 h-0 border-l-4 border-r-4 border-t-4 border-t-gray-600 dark:border-t-white border-l-transparent border-r-transparent pointer-events-none transition-transform duration-200 custom-arrow"></span>
             </div>
             <div class="mb-5">
                 <label class="block mb-3 font-medium text-[12px] leading-[15px] dark:text-customblack text-white"
