home page update

--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -137,7 +137,7 @@
             </p>
 
             <div class="mt-10 flex justify-center space-x-4">
-                <a href="javascript:void(0);"
+                <a href="https://zfrmz.in/orIRd7fMK7126EfvtCKV" target="_blank"
                     class="dark:bg-custom-green bg-customblue dark:text-black text-white font-bold py-3 px-5 rounded-full dark:hover:shadow-[0_0_16px_0_#7DFFAF] hover:shadow-[0_0_16px_0_#022648] transition-shadow duration-300">
                     Book Your Free Consultation</a>
             </div>
@@ -392,7 +392,7 @@
             </section>
 
             <div class="mt-10">
-                <a href="javascript:void(0);"
+                <a href="https://zfrmz.in/orIRd7fMK7126EfvtCKV" target="_blank"
                     class="dark:bg-custom-green bg-customblue dark:text-black  text-white font-bold py-3 px-7 rounded-full dark:hover:shadow-[0_0_16px_0_#7DFFAF] hover:shadow-[0_0_16px_0_#022648]transition-shadow duration-300">
                     Get a Career Assessment</a>
             </div>
@@ -444,7 +444,7 @@
                 </h2>
 
                 <div class="mt-10 pb-1">
-                    <a href="javascript:void(0);"
+                    <a href="https://zfrmz.in/orIRd7fMK7126EfvtCKV" target="_blank"
                         class="dark:bg-custom-green bg-customblue dark:text-black text-white font-bold py-3 px-7 rounded-full dark:hover:shadow-[0_0_16px_0_#7DFFAF] hover:shadow-[0_0_16px_0_#022648] transition-shadow duration-300">
                         Get in Touch
                     </a>
@@ -494,7 +494,7 @@
 </body>
 <!-- Modal Structure -->
 <div id="curriculumModal"
-    class="fixed inset-0 hidden bg-opacity-50 bg-gray-900 flex justify-center items-center z-50 font-poppins overflow-y-auto">
+    class="fixed inset-0 hidden bg-opacity-50 bg-gray-900 flex justify-center  z-50 font-poppins overflow-y-auto">
     <div
         class="relative  bg-customlightgreen rounded p-6 shadow-lg w-full max-w-md md:max-w-lg lg:max-w-[44.688rem] py-8 px-4 sm:py-16 sm:px-8">
         <button id="closeModalButton" class="absolute top-4 right-4">
@@ -502,7 +502,7 @@
             <img src="../assets/images/icons/x-light-icon.png" alt="Close" class="w-5 h-5 hidden dark:block">
         </button>
         
-        <iframe aria-label='Free Career Counselling Form' frameborder="0" style="height:500px;width:99%;border:none;" src='https://zfrmz.in/orIRd7fMK7126EfvtCKV'></iframe>
+        <iframe class="custom-iframe"     aria-label='Free Career Counselling Form' frameborder="0"  src='https://zfrmz.in/orIRd7fMK7126EfvtCKV'></iframe>
 
     </div>
 </div>
