--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -496,8 +496,8 @@
 <div id="curriculumModal"
     class="fixed inset-0 hidden bg-opacity-50 bg-gray-900 flex justify-center  z-50 font-poppins overflow-y-auto">
     <div
-        class="relative  bg-customlightgreen rounded p-6 shadow-lg w-full max-w-md md:max-w-lg lg:max-w-[44.688rem] py-8 px-4 sm:py-16 sm:px-8">
-        <button id="closeModalButton" class="absolute top-4 right-4">
+        class="relative  bg-customlightgreen rounded p-6 shadow-lg w-full max-w-md md:max-w-lg lg:max-w-[44.688rem] py-8 px-1 sm:py-16 sm:px-1" style="padding: 10px 0px;">
+        <button id="closeModalButton" class="absolute top-2 right-4" >
             <img src="../assets/images/icons/x-icon.png" alt="Close" class="w-5 h-5 dark:hidden block">
             <img src="../assets/images/icons/x-light-icon.png" alt="Close" class="w-5 h-5 hidden dark:block">
         </button>
