removed unwanted code

--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -63,11 +63,11 @@
                     href="#about-us">About us</a>
             </li>
         </ul>
-        <button id="curriculumModalButtonMobile"
+        <a href="https://zfrmz.in/orIRd7fMK7126EfvtCKV" target="_blank"><button 
             class="dark:bg-custom-green bg-customblue dark:text-black text-white font-bold py-2 px-4 rounded-full dark:hover:shadow-[0_0_16px_0_#7DFFAF] hover:shadow-[0_0_16px_0_#022648] transition-shadow duration-300"
             onclick="location.href='#curriculum'">
             Contact Us
-        </button>
+        </button></a>
         <button id="theme-toggle-mobile" class="focus:outline-none mt-4 relative top-[10px] right-[-32px]">
             <img id="theme-icon-mobile" src="../assets/images/icons/sun-icon.svg" alt="Toggle Dark/Light Mode" class="w-8 h-8" />
         </button>
@@ -115,11 +115,11 @@
                     <img id="theme-icon-desktop" src="../assets/images/icons/sun-icon.svg" alt="Toggle Dark/Light Mode"
                         class="w-8 h-8" />
                 </button>
-            <button id="curriculumModalButtonDesktop"
+            <a href="https://zfrmz.in/orIRd7fMK7126EfvtCKV" target="_blank"><button 
                     class="dark:bg-custom-green bg-customblue dark:text-black text-white font-bold py-2 px-4 rounded-full dark:hover:shadow-[0_0_16px_0_#7DFFAF] hover:shadow-[0_0_16px_0_#022648] transition-shadow duration-300"
                     onclick="location.href='#curriculum'">
                     Contact Us 
-                </button>
+                </button></a>
             </div>
         </div>
     </header>
@@ -493,19 +493,16 @@
     </div>
 </body>
 <!-- Modal Structure -->
-<div id="curriculumModal"
+<!-- <div id="curriculumModal"
     class="fixed inset-0 hidden bg-opacity-50 bg-gray-900 flex justify-center  z-50 font-poppins overflow-y-auto">
     <div
         class="relative  bg-customlightgreen rounded p-6 shadow-lg w-full max-w-md md:max-w-lg lg:max-w-[44.688rem] py-8 px-1 sm:py-16 sm:px-1" style="padding: 10px 0px;">
-        <button id="closeModalButton" class="absolute top-2 right-4" >
+        <a href="https://zfrmz.in/orIRd7fMK7126EfvtCKV" target="_blank"><button id="closeModalButton" class="absolute top-2 right-4" >
             <img src="../assets/images/icons/x-icon.png" alt="Close" class="w-5 h-5 dark:hidden block">
             <img src="../assets/images/icons/x-light-icon.png" alt="Close" class="w-5 h-5 hidden dark:block">
-        </button>
-        
-        <iframe class="custom-iframe"     aria-label='Free Career Counselling Form' frameborder="0"  src='https://zfrmz.in/orIRd7fMK7126EfvtCKV'></iframe>
-
+        </button></a>
     </div>
-</div>
+</div> -->
 
 
 
