--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class=" transition-colors duration-100">
+<html lang="en" class=" transition-colors duration-100 dark">
 
 <head>
     <meta charset="UTF-8" />
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
-<body class="dark:bg-black bg-white font-poppins font-display-swap  transition-colors duration-500">
+<body class=" dark:bg-black bg-white font-poppins font-display-swap  transition-colors duration-500">
     <header
     class="sm:block md:hidden lg:hidden xl:hidden 2xl:hidden pt-10 pb-4 sticky top-0 dark:bg-black bg-white z-50 transition-colors duration-300">
     <div class="flex items-center justify-between px-4">
