--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="icon" type="image/png" href="../Vertacx/src/assets/images/icons/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../Vertacx/src/assets/css/output.css" />
-    <link rel="stylesheet" href="../Vertacx/src/assets/css/style.css">
+    <link rel="stylesheet" href="../src/assets/css/output.css" />
+    <link rel="stylesheet" href="../src/assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick-theme.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
@@ -511,7 +511,7 @@
 <!-- Slick Slider JS -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.min.js"></script>
-<script type="text/javascript" src="../Vertacx/src/assets/js/Home-page.js"></script>
+<script type="text/javascript" src="../src/assets/js/Home-page.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
 
 </html>
