--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta property="og:title" content="vertacX">
     <meta property="og:description" content="Unlock Your Future with Skills That Matter, Forge a resilient career with a partner
     who puts people first.">
-    <meta property="og:link" content="https://www.greypathsolutions.com/development/Vertacx/index.html">
-    <meta property="og:image" content="https://www.greypathsolutions.com/development/Vertacx/src/assets/images/logo/og-image.png">
+    <meta property="og:link" content="../index.html">
+    <meta property="og:image" content="../src/assets/images/logo/og-image.png">
     <meta property="og:image:alt" content="vertacX thumbnail" />
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="436">
     <meta property="og:image:height" content="245">
     <title>vertacX</title>
-    <link rel="icon" type="image/png" href="../Vertacx/src/assets/images/icons/favicon.png">
+    <link rel="icon" type="image/png" href="../src/assets/images/icons/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../src/assets/css/output.css" />
@@ -32,11 +32,11 @@
     <header
     class="sm:block md:hidden lg:hidden xl:hidden 2xl:hidden pt-10 pb-4 sticky top-0 dark:bg-black bg-white z-50 transition-colors duration-300">
     <div class="flex items-center justify-between px-4">
-        <img src="../Vertacx/src/assets/images/logo/vertacx-logo.svg" alt="Vertacx Logo" class="w-[155px] h-auto dark:block hidden" />
-        <img src="../Vertacx/src/assets/images/logo/vertacx-light-logo.svg" alt="" class="w-[155px] h-auto dark:hidden block">
+        <img src="../src/assets/images/logo/vertacx-logo.svg" alt="Vertacx Logo" class="w-[155px] h-auto dark:block hidden" />
+        <img src="../src/assets/images/logo/vertacx-light-logo.svg" alt="" class="w-[155px] h-auto dark:hidden block">
         <button id="toggleButton" class="text-white focus:outline-none">
-            <img src="../Vertacx/src/assets/images/icons/menu-icon.svg" alt="menu-icon" class="dark:block hidden" />
-            <img src="../Vertacx/src/assets/images/icons/menu-light-icon.svg" alt="menu-icon" class="dark:hidden block" />
+            <img src="../src/assets/images/icons/menu-icon.svg" alt="menu-icon" class="dark:block hidden" />
+            <img src="../src/assets/images/icons/menu-light-icon.svg" alt="menu-icon" class="dark:hidden block" />
         </button>
     </div>
     <nav id="sidebarMenu"
@@ -69,7 +69,7 @@
             Contact Us
         </button></a>
         <button id="theme-toggle-mobile" class="focus:outline-none mt-4 relative top-[10px] right-[-32px]">
-            <img id="theme-icon-mobile" src="../assets/images/icons/sun-icon.svg" alt="Toggle Dark/Light Mode" class="w-8 h-8" />
+            <img id="theme-icon-mobile" src="../src/assets/images/icons/sun-icon.svg" alt="Toggle Dark/Light Mode" class="w-8 h-8" />
         </button>
     </nav>
 </header>
@@ -80,9 +80,9 @@
         class="hidden md:block sticky top-0 dark:bg-black bg-white z-50 transition-all duration-300">
         <div class="max-w-custom mx-auto flex items-center justify-between px-4 py-20">
             <div class="flex-shrink-0">
-                <img src="../Vertacx/src/assets/images/logo/vertacx-logo.svg" alt=""
+                <img src="../src/assets/images/logo/vertacx-logo.svg" alt=""
                     class="lg:w-48 md:w-32 h-auto dark:block hidden transition-colors duration-300">
-                <img src="../Vertacx/src/assets/images/logo/vertacx-light-logo.svg" alt=""
+                <img src="../src/assets/images/logo/vertacx-light-logo.svg" alt=""
                     class="lg:w-48 md:w-32 h-auto  dark:hidden block transition-colors duration-300">
             </div>
             <nav class="hidden md:flex md:items-center md:space-x-6 lg:space-x-8">
@@ -112,7 +112,7 @@
             <div class="hidden md:flex items-center space-x-4">
                 <!-- Dark/Light mode toggle button -->
                 <button id="theme-toggle-desktop" class="focus:outline-none">
-                    <img id="theme-icon-desktop" src="../Vertacx/src/assets/images/icons/sun-icon.svg" alt="Toggle Dark/Light Mode"
+                    <img id="theme-icon-desktop" src="../src/assets/images/icons/sun-icon.svg" alt="Toggle Dark/Light Mode"
                         class="w-8 h-8" />
                 </button>
             <a href="https://zfrmz.in/orIRd7fMK7126EfvtCKV" target="_blank"><button 
@@ -162,9 +162,9 @@
             <section class="mt-20 grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div
                     class="border dark:border-green-400 border-customviolet rounded-2xl px-10 py-14 transform transition-transform hover:scale-105">
-                    <img src="../Vertacx/src/assets/images/icons/book-icon.svg" alt="Bundled Soft Skills"
+                    <img src="../src/assets/images/icons/book-icon.svg" alt="Bundled Soft Skills"
                         class="w-18 h-18 mx-auto dark:block hidden" />
-                    <img src="../Vertacx/src/assets/images/icons/book-light-icon.svg" alt="Bundled Soft Skills"
+                    <img src="../src/assets/images/icons/book-light-icon.svg" alt="Bundled Soft Skills"
                         class="w-18 h-18 mx-auto dark:hidden block" />
                     <h3 class="text-xl font-semibold mt-6 mb-3 dark:text-white text-customblack">
                         Comprehensive Skill Building
@@ -176,9 +176,9 @@
 
                 <div
                     class="border dark:border-green-400 border-customviolet rounded-2xl px-10 py-14 transform transition-transform hover:scale-105">
-                    <img src="../Vertacx/src/assets/images/icons/member-icon.svg" alt="1-on-1 Mentorship"
+                    <img src="../src/assets/images/icons/member-icon.svg" alt="1-on-1 Mentorship"
                         class="w-18 h-18 mx-auto dark:block hidden" />
-                    <img src="../Vertacx/src/assets/images/icons/member-light-icon.svg" alt="1-on-1 Mentorship"
+                    <img src="../src/assets/images/icons/member-light-icon.svg" alt="1-on-1 Mentorship"
                         class="w-18 h-18 mx-auto dark:hidden block" />
                     <h3 class="text-xl font-semibold mt-6 mb-3 dark:text-white text-customblack">
                         Personalized <br> Mentorship
@@ -189,9 +189,9 @@
                 </div>
                 <div
                     class="border dark:border-green-400 border-customviolet rounded-2xl px-10 py-14 transform transition-transform hover:scale-105">
-                    <img src="../Vertacx/src/assets/images/icons/session-icon.svg" alt="Interactive Sessions"
+                    <img src="../src/assets/images/icons/session-icon.svg" alt="Interactive Sessions"
                         class="w-18 h-16 mx-auto dark:block hidden" />
-                    <img src="../Vertacx/src/assets/images/icons/session-light-icon.svg" alt="Interactive Sessions"
+                    <img src="../src/assets/images/icons/session-light-icon.svg" alt="Interactive Sessions"
                         class="w-18 h-16 mx-auto dark:hidden block" />
                     <h3 class="text-xl font-semibold mt-6 mb-3 dark:text-white text-customblack">
                         Engage in Dynamic Learning
@@ -209,9 +209,9 @@
                 <div class="slick-slider mt-10">
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10 ">
-                            <img src="../Vertacx/src/assets/images/icons/frontend-dark-icon.svg" alt="book-mark"
+                            <img src="../src/assets/images/icons/frontend-dark-icon.svg" alt="book-mark"
                                 class="mx-auto   dark:!block !hidden w-[125px] " />
-                            <img src="../Vertacx/src/assets/images/icons/Frontend-light-icon.svg" alt="book-mark" 
+                            <img src="../src/assets/images/icons/Frontend-light-icon.svg" alt="book-mark" 
                                 class="mx-auto  dark:hidden block w-[125px] " />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 Front End Development
@@ -228,9 +228,9 @@
                     </div>
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10">
-                            <img src="../Vertacx/src/assets/images/icons/backend-dark-icon.svg" alt="book-mark"
+                            <img src="../src/assets/images/icons/backend-dark-icon.svg" alt="book-mark"
                                 class="mx-auto  w-[125px]   dark:!block !hidden" />
-                            <img src="../Vertacx/src/assets/images/icons/backend-light-icon.svg" alt="book-mark"
+                            <img src="../src/assets/images/icons/backend-light-icon.svg" alt="book-mark"
                                 class="mx-auto w-[125px]  dark:hidden block" />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 Backend Development
@@ -246,9 +246,9 @@
                     </div>
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10">
-                            <img src="../Vertacx/src/assets/images/icons/ai-dark-icon.svg" alt="book-mark"
+                            <img src="../src/assets/images/icons/ai-dark-icon.svg" alt="book-mark"
                                 class="mx-auto w-[125px]    dark:!block !hidden" />
-                            <img src="../Vertacx/src/assets/images/icons/ai-light-icon.svg" alt="book-mark"
+                            <img src="../src/assets/images/icons/ai-light-icon.svg" alt="book-mark"
                                 class="mx-auto w-[125px] dark:hidden block" />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 AI/ML Development
@@ -265,9 +265,9 @@
                     </div>
                     <div class="p-1">
                         <div class="dark:bg-customBackground bg-customblue rounded shadow-lg p-6 pt-10">
-                            <img src="../Vertacx/src/assets/images/icons/low-dark-icon.svg" alt="book-mark"
+                            <img src="../src/assets/images/icons/low-dark-icon.svg" alt="book-mark"
                                 class="mx-auto w-[125px]    dark:!block !hidden" />
-                            <img src="../Vertacx/src/assets/images/icons/low-code-icon.svg" alt="book-mark"
+                            <img src="../src/assets/images/icons/low-code-icon.svg" alt="book-mark"
                                 class="mx-auto w-[125px]  dark:hidden block" />
                             <div class="text-white sm:text-[20px] font-semibold leading-[1.3] mt-6">
                                 Low Code Development
@@ -300,9 +300,9 @@
                         class="px-7 py-7 md:px-5 md:py-8 text-xl md:text-base font-semibold leading-normal md:leading-28 dark:text-white text-customblack text-left cursor-pointer collapse-toggle">
                         <div class="flex justify-between items-center">
                             <h1>1. Free Career Assessment</h1>
-                            <img src="../Vertacx/src/assets/images/icons/collapse-close-icon.svg" alt=""
+                            <img src="../src/assets/images/icons/collapse-close-icon.svg" alt=""
                                 class="cursor-pointer dark-icon dark:block hidden" />
-                            <img src="../Vertacx/src/assets/images/icons/collapse-light-close-icon.svg" alt=""
+                            <img src="../src/assets/images/icons/collapse-light-close-icon.svg" alt=""
                                 class="cursor-pointer light-icon dark:hidden block" />
                         </div>
                     </div>
@@ -319,9 +319,9 @@
                         class="px-7 py-7 md:px-5 md:py-8 text-xl md:text-base font-semibold leading-normal md:leading-28 dark:text-white text-customblack text-left cursor-pointer collapse-toggle">
                         <div class="flex justify-between items-center">
                             <h1>2. Program Onboarding</h1>
-                            <img src="../Vertacx/src/assets/images/icons/collapse-close-icon.svg" alt=""
+                            <img src="../src/assets/images/icons/collapse-close-icon.svg" alt=""
                                 class="cursor-pointer dark-icon  dark:block hidden" />
-                            <img src="../Vertacx/src/assets/images/icons/collapse-light-close-icon.svg" alt=""
+                            <img src="../src/assets/images/icons/collapse-light-close-icon.svg" alt=""
                                 class="cursor-pointer light-icon dark:hidden block" />
                         </div>
                     </div>
@@ -338,9 +338,9 @@
                         class="px-7 py-7 md:px-5 md:py-8 text-xl md:text-base font-semibold leading-normal md:leading-28 dark:text-white text-customblack text-left cursor-pointer collapse-toggle">
                         <div class="flex justify-between items-center">
                             <h1>3. Learning Sprint and retrospective</h1>
-                            <img src="../Vertacx/src/assets/images/icons/collapse-close-icon.svg" alt=""
+                            <img src="../src/assets/images/icons/collapse-close-icon.svg" alt=""
                                 class="cursor-pointe dark-icon dark:block hidden" />
-                            <img src="../Vertacx/src/assets/images/icons/collapse-light-close-icon.svg" alt=""
+                            <img src="../src/assets/images/icons/collapse-light-close-icon.svg" alt=""
                                 class="cursor-pointer light-icon dark:hidden block" />
                         </div>
                     </div>
@@ -357,9 +357,9 @@
                         class="px-7 py-7 md:px-5 md:py-8 text-xl md:text-base font-semibold leading-normal md:leading-28 dark:text-white text-customblack text-left cursor-pointer collapse-toggle">
                         <div class="flex justify-between items-center">
                             <h1>4. Capstone Project</h1>
-                            <img src="../Vertacx/src/assets/images/icons/collapse-close-icon.svg" alt=""
+                            <img src="../src/assets/images/icons/collapse-close-icon.svg" alt=""
                                 class="cursor-pointer dark-icon dark:block hidden" />
-                            <img src="../Vertacx/src/assets/images/icons/collapse-light-close-icon.svg" alt=""
+                            <img src="../src/assets/images/icons/collapse-light-close-icon.svg" alt=""
                                 class="cursor-pointer light-icon dark:hidden block" />
                         </div>
                     </div>
@@ -376,9 +376,9 @@
                         class="px-7 py-7 md:px-5 md:py-8 text-xl md:text-base font-semibold leading-normal md:leading-28 dark:text-white text-customblack text-left cursor-pointer collapse-toggle">
                         <div class="flex justify-between items-center">
                             <h1>5. Internship (Available only for full-time offline attendees)</h1>
-                            <img src="../Vertacx/src/assets/images/icons/collapse-close-icon.svg" alt=""
+                            <img src="../src/assets/images/icons/collapse-close-icon.svg" alt=""
                                 class="cursor-pointer dark-icon dark:block hidden" />
-                            <img src="../Vertacx/src/assets/images/icons/collapse-light-close-icon.svg" alt=""
+                            <img src="../src/assets/images/icons/collapse-light-close-icon.svg" alt=""
                                 class="cursor-pointer light-icon dark:hidden block" />
                         </div>
                     </div>
@@ -398,8 +398,8 @@
             </div>
 
             <section class="mt-20">
-                <img src="../Vertacx/src/assets/images/logo/global.svg" alt="Global" class="mx-auto dark:block hidden" />
-                <img src="../Vertacx/src/assets/images/logo/global-light.svg" alt="Global light" class="mx-auto  dark:hidden block">
+                <img src="../src/assets/images/logo/global.svg" alt="Global" class="mx-auto dark:block hidden" />
+                <img src="../src/assets/images/logo/global-light.svg" alt="Global light" class="mx-auto  dark:hidden block">
             </section>
             <section class="mt-12 text-center">
 
@@ -427,8 +427,8 @@
             </section>
           
             <section class="mt-12" id="about-us">
-                <img src="../Vertacx/src/assets/images/logo/vertacx-logo.svg" alt="" class="w-48 h-auto mx-auto dark:block hidden">
-                <img src="../Vertacx/src/assets/images/logo/vertacx-light-logo.svg" alt=""
+                <img src="../src/assets/images/logo/vertacx-logo.svg" alt="" class="w-48 h-auto mx-auto dark:block hidden">
+                <img src="../src/assets/images/logo/vertacx-light-logo.svg" alt=""
                     class="w-48 h-auto mx-auto dark:hidden block">
                 <p
                     class="mt-6 text-lg md:text-xl dark:text-white text-customblack md:font-normal md:font-medium md:leading-170% lg:text-2xl max-w-3xl mx-auto">
@@ -488,8 +488,8 @@
     <div id="swipeUpContainer"
         class="swipe-up-container flex justify-end 2xl:pr-12 pl-2 pb-5 transform scale-0 transition-colors duration-300 fixed bottom-5 right-5"
         onclick="scrollToTop()">
-        <img src="../Vertacx/src/assets/images/icons/swipe-up.png" alt="Swipe Up" class="w-12 h-12 dark:block hidden" />
-        <img src="../Vertacx/src/assets/images/icons/swipe-up-light.svg" alt="Swipe Up" class="w-12 h-12 dark:hidden block" />
+        <img src="../src/assets/images/icons/swipe-up.png" alt="Swipe Up" class="w-12 h-12 dark:block hidden" />
+        <img src="../src/assets/images/icons/swipe-up-light.svg" alt="Swipe Up" class="w-12 h-12 dark:hidden block" />
     </div>
 </body>
 <!-- Modal Structure -->
