--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Unlock Your Future with Skills That Matter, Forge a resilient career with a partner
     who puts people first.">
     <meta property="og:link" content="../index.html">
-    <meta property="og:image" content="../src/assets/images/logo/og-image.png">
+    <meta property="og:image" content="https://vertacx.com/src/assets/images/logo/og-image.png">
     <meta property="og:image:alt" content="vertacX thumbnail" />
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="436">
@@ -26,6 +26,22 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick-theme.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Google tag (gtag.js) for www -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NR8WZM4GGQ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-NR8WZM4GGQ');
+    </script>
+    <!-- Google tag (gtag.js) for domain-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PCLNP4HFTC"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PCLNP4HFTC');
+    </script>
 </head>
 
 <body class=" dark:bg-black bg-white font-poppins font-display-swap  transition-colors duration-500">
