The gobal logo image fixed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </li>
             <li>
                 <a class="dark:text-white text-customblue hover:text-customGreen transition-colors"
-                    href="#why-vertax">Why Vertax</a>
+                    href="#why-vertax">Why Vertacx</a>
             </li>
             <li>
                 <a class="dark:text-white text-customblue hover:text-customGreen transition-colors"
@@ -109,7 +109,7 @@
                     </li>
                     <li>
                         <a class="dark:text-white text-black dark:hover:text-customGreen hover:text-customblue transition-colors"
-                            href="#why-vertax">Why Vertax</a>
+                            href="#why-vertax">Why Vertacx</a>
                     </li>
                     <li>
                         <a class="dark:text-white text-black dark:hover:text-customGreen hover:text-customblue transition-colors"
