updated the changes

--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
             </h1>
             <p
                 class="mt-6 text-base md:text-[24px] font-normal leading-6 md:leading-[36px] tracking-[0.32px] md:tracking-[0.48px] w-full lg:w-[740px] mx-auto dark:text-white text-customblack">
-                At Vertacx, we provide tailored, hands-on learning experiences within a real-world software environment,
-                ensuring you become an industry-ready <br> software engineer.
+                At Vertacx, we prepare you for the real world. Our hands-on learning experiences equip you with the skills that bridge the gap between what you know and what the <br class="hidden md:block">industry needs.
             </p>
 
             <div class="mt-10 flex justify-center space-x-4">
@@ -162,16 +161,16 @@
                     class="font-poppins font-semibold text-2xl md:text-4xl  dark:text-customGreen text-customblue leading-normal md:leading-none tracking-wide md:tracking-normal">
                     Why Choose Vertacx?
                 </h2>
-                <p
+                <!-- <p
                     class="mt-4 text-lg md:text-2xl max-w-lg mx-auto dark:text-white text-customblack leading-[30px] md:leading-[40px] tracking-[1.28px] md:tracking-[0.8px] font-normal md:font-semibold">
                     Forge a resilient career with a partner
                     <br class="hidden md:block" />
                     who puts people first.
-                </p>
+                </p> -->
                 <p
                     class="mt-4 dark:text-white text-customblack sm:text-base md:text-2xl font-normal md:font-medium leading-[27.8px] md:leading-[40.8px] tracking-[0.32px] md:tracking-[0.48px]">
-                    At Vertacx, we redefine upskilling by focusing on <br class="hidden md:block"> what truly matters—your growth, with a
-                    <i class="md:font-normal">human touch that sets you apart.</i><br class="hidden md:block" />
+                    At Vertacx, we focus on preskilling that drives your growth, giving <br class="hidden md:block"> 
+                    <i class="md:font-normal">you the foundation to succeed</i> in your career.<br class="hidden md:block" />
                 </p>
             </section>
 
@@ -186,8 +185,7 @@
                         Comprehensive Skill Building
                     </h3>
                     <p class="dark:text-white text-customblack">
-                        At Vertacx, our agile-based programs go beyond technical training. Led by mentors, we integrate essential soft skills with cutting-edge software engineering, all within a simulated work environment.
-                    </p>
+                        At Vertacx, our agile programs go beyond technical skills. Guided by mentors, we combine essential soft skills with the latest tech stacks and industry-grade tools in a simulated work environment.                    </p>
                 </div>
 
                 <div
@@ -213,8 +211,7 @@
                         Engage in Dynamic Learning
                     </h3>
                     <p class="dark:text-white text-customblack">
-                        Say goodbye to traditional lectures/videos. At Vertacx, our sessions mix role-playing, hands-on projects, and interactive content to create a powerful and immersive learning experience.
-                    </p>
+                        At Vertacx, we move beyond traditional lectures and videos. Our sessions blend role-playing, hands-on projects, and interactive content to deliver an engaging and immersive learning experience.                    </p>
                 </div>
             </section>
             <section class="container mx-auto mt-12 scroll-mt-20 md:pt-24 lg:pt-10" id="our-programs">
@@ -426,12 +423,10 @@
                 </h2>
                 <p
                     class="mt-4 text-base font-normal leading-6 tracking-wide md:text-2xl md:leading-[40.8px] md:tracking-[0.03em] max-w-3xl mx-auto dark:text-white text-customblack">
-                    For the modern employee, technical skills are only part of the
-                    equation. Our programs focus on the essential soft skills employees
-                    need to be the next generation of leaders.
+                    In the AI era, technical skills alone aren't enough for today's workforce. Our programs emphasize the critical soft skills needed to be job-ready.
                 </p>
 
-                <p
+                <!-- <p
                     class="mt-4 text-lg font-medium leading-[1.3] md:text-2xl md:leading-[1.3] dark:text-white text-customblack">
                     Essential soft skills include:
                 </p>
@@ -439,7 +434,7 @@
                 <p
                     class="mt-4 text-base font-normal leading-6 tracking-wide md:text-2xl md:leading-[40.8px] md:tracking-[0.03em] mx-auto dark:text-white text-customblack">
                     Communication, critical thinking, emotional intelligence, collaboration, problem solving, change management, empathy, resilience and more.
-                </p>
+                </p> -->
             </section>
           
             <section class="mt-12" id="about-us">
@@ -499,7 +494,7 @@
         </p>
         <p class="text-center dark:text-white text-customblack text-[12px] font-normal leading-5">6A, 4th Floor, GVR
             complex, <br>
-            Lawson's road, Contonment, Trichy - 620001.</p>
+            Lawson's road, Cantonment, Trichy - 620001.</p>
     </footer>
     <div id="swipeUpContainer"
         class="swipe-up-container flex justify-end 2xl:pr-12 pl-2 pb-5 transform scale-0 transition-colors duration-300 fixed bottom-5 right-5"
